# time-clock

./: .coverage  README.md  install.sh  io.github.user.LinuxClockApp.yml  pyproject.toml  quality-gate-status.json
.beads/: metadata.json
data/: io.github.user.LinuxClockApp.desktop
docs/c4flow/: .state.json
docs/specs/linux-clock-app/: design.md  proposal.md  research.md  spec.md  tech-stack.md
docs/superpowers/plans/: 2026-03-17-drag-toggle-hotkey.md
docs/superpowers/specs/: 2026-03-17-drag-toggle-hotkey-design.md
linux_clock_app/: __init__.py  __main__.py  app.py  clock_controller.py  clock_window.py  config_manager.py  lunar_calendar.py  models.py  settings_dialog.py
tests/: test_clock_controller.py  test_config_manager.py  test_drag_hotkey.py
